# fleetmix

./: .gitignore  CHANGELOG_PER_VEHICLE_PARAMS.md  FINAL_SUMMARY_PER_VEHICLE_PARAMS.md  LICENSE  README.md  codecov.yml  init.sh  interface_analysis.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  test.yml
data/: export_queries.py  import_data.py
data/demand_profiles/: sales_2024_minimal_day_demand.csv
docs/: debugging.md  examples.md  file_structure_mapping.md  mapping.md  parallelism.md  public_api_changes_summary.md  public_api_summary.md  quickstart.md
examples/: README_heterogeneous_fleet.md  custom_clustering.py  custom_route_time.py  custom_solver_adapter.py  heterogeneous_fleet.py  heterogeneous_fleet_config.yaml  heterogeneous_fleet_demo.py  public_api_demo.py  visualize_fleet_comparison.py
src/fleetmix/: __init__.py  __main__.py  api.py  app.py  core_types.py  gui.py  interfaces.py  internal_types.py  registry.py  types.py
src/fleetmix/benchmarking/: __init__.py
src/fleetmix/benchmarking/converters/: cvrp.py  mcvrp.py  vrp.py
src/fleetmix/benchmarking/datasets/: __init__.py
src/fleetmix/benchmarking/models/: __init__.py
src/fleetmix/benchmarking/parsers/: cvrp.py
src/fleetmix/benchmarking/solvers/: vrp_solver.py
src/fleetmix/cli/: __init__.py  main.py  run_all_cvrp.py  run_all_mcvrp.py  run_benchmark.py  vrp_to_fsm.py
src/fleetmix/clustering/: __init__.py  generator.py  heuristics.py
src/fleetmix/config/: SCV_config.yaml  __init__.py  alpha_tests_MCV.yaml  alpha_tests_MCV_100.yaml  alpha_tests_SCV.yaml  avgspeed_m20_config.yaml  avgspeed_m50_config.yaml  avgspeed_p20_config.yaml  avgspeed_p50_config.yaml  baseline_config.yaml  capacity_m20_config.yaml  capacity_m50_config.yaml  capacity_p20_config.yaml  capacity_p50_config.yaml  default_config.yaml  default_config_10min.yaml  default_config_1min.yaml  default_config_1min_gap.yaml  default_config_high_10min.yaml  default_config_high_1min.yaml  default_config_high_1min_gap.yaml  default_config_low_1min_gap.yaml  default_config_mid_1min_gap.yaml  example_allowed_goods_config.yaml  loader.py  parameters.py  params.py  post_opt_false_config.yaml  routetime_m20_config.yaml  routetime_m50_config.yaml  routetime_p20_config.yaml  routetime_p50_config.yaml  varcost_m20_config.yaml  varcost_m50_config.yaml  varcost_p20_config.yaml  varcost_p50_config.yaml
src/fleetmix/merging/: core.py
src/fleetmix/optimization/: __init__.py  core.py
src/fleetmix/pipeline/: __init__.py  vrp_interface.py
src/fleetmix/post_optimization/: __init__.py  merge_phase.py
src/fleetmix/preprocess/: __init__.py  demand.py
src/fleetmix/utils/: __init__.py  cli.py  cluster_conversion.py  common.py  coordinate_converter.py  data_processing.py  debug.py  logging.py  route_time.py  save_results.py  solver.py  time_measurement.py  vehicle_configurations.py
src/fleetmix_example_plugins/: naive_solver.py  round_robin.py  straight_line.py
tests/: conftest.py  test_cli.py  test_end_to_end.py
tests/_assets/: test_data_aggregation.csv  test_data_latin1.csv
tests/_assets/cli_inputs/: minimal_demand.csv
tests/_assets/configs/: base_test_config.yaml  invalid_config.yaml  invalid_syntax_config.yaml  test_config_bhh.yaml  test_config_minimal.yaml  test_config_post_opt.yaml  test_config_tsp.yaml  test_demand.csv
tests/_assets/smoke/: mini.yaml
tests/cli/: test_cli.py  test_run_all_scripts.py
tests/component/: test_cvrp_parser.py  test_cvrp_to_fsm.py  test_mcvrp_to_fsm.py  test_parameters.py  test_vehicle_configurations.py
tests/core/: test_fsm_optimizer_core.py  test_fsm_scenarios.py
tests/data/: mid.csv  tiny.csv
tests/golden/mid/: results.json
tests/golden/tiny/: results.json
tests/gui/: test_gui.py  test_gui_e2e_approaches.py  test_gui_import.py
tests/integration/: test_allowed_goods_e2e.py  test_benchmarking_e2e_simple.py  test_benchmarking_workflows.py  test_cli_endpoints.py  test_cli_workflows.py  test_core_algorithms.py  test_main_cli.py
tests/mcvrp/: __init__.py  test_parser.py
tests/public_api/: test_api_surface.py  test_optimize_return_type.py
tests/unit/: test_api.py  test_api_comprehensive.py  test_api_optimize_contract.py  test_app.py  test_app_cli.py  test_app_comprehensive.py  test_app_helpers.py  test_app_utils.py  test_benchmark_types.py  test_cli_utils.py  test_clustering_utils.py  test_converter_vrp.py  test_coordinate_converter.py  test_coordinate_converter_comprehensive.py  test_coordinate_converter_main.py  test_coordinate_converter_roundtrip2.py  test_cvrp_parser_bks.py  test_cvrp_parser_edges.py  test_cvrp_parser_small.py  test_data_processing.py  test_data_processing_extras.py  test_data_processing_full.py  test_data_processing_full.py.bak  test_debug_utils.py  test_feasibility_helpers.py  test_fsm_model_build.py  test_fsm_optimizer_edges.py  test_interfaces_protocols.py  test_logging_utils.py  test_merge_phase_edge_cases.py  test_multi_compartment_selection.py  test_optimization_core.py  test_parameters_validation_edge_cases.py  test_parameters_yaml_edge_cases.py  test_parameters_yaml_edge_cases2.py  test_pipeline_interface.py  test_post_opt.py  test_project_root.py  test_pseudo_customer_clustering.py  test_route_time.py  (+14 more)
tests/utils/: stubs.py  test_coordinate_converter.py  test_coordinate_converter_roundtrip.py  test_data_processing.py  test_logging.py  test_project_root.py  test_route_time.py  test_save_results.py  test_solver.py  test_time_measurement.py
tools/: README_refactoring.md  analyze_exports.py  parse_benchmarking_results.py  run_benchmarks.py
(+74 files in other folders)
