[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetmix"
version = "0.1.0b1"
description = "Fleet Size and Mix optimizer for heterogeneous fleets of multi-compartment vehicles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "streamlit",
    "plotly",
    "scikit-learn",
    "kmedoids",
    "folium",
    "streamlit-folium",
    "haversine",
    "gurobipy",
    "geopy",
    "jupyter",
    "pulp",
    "numba",
    "cython",
    "joblib",
    "tqdm",
    "openpyxl",
    "pyvrp",
    "rich",
    "vrplib",
    "typer[all]>=0.9.0",
]

[project.scripts]
fleetmix = "fleetmix.app:app"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "pytest-xdist",
    "requests",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
