[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetmix"
version = "0.1.0b1"
description = "Fleet Size and Mix optimizer for heterogeneous fleets of multi-compartment vehicles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "streamlit",
    "plotly",
    "scikit-learn",
    "kmedoids",
    "folium",
    "streamlit-folium",
    "haversine",
    "gurobipy",
    "geopy",
    "jupyter",
    "pulp",
    "numba",
    "cython",
    "joblib",
    "tqdm",
    "openpyxl",
    "pyvrp",
    "rich",
    "vrplib",
    "typer[all]>=0.9.0",
]

[project.scripts]
fleetmix = "fleetmix.app:app"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "pytest-xdist",
]
dev = [
    "mypy",
    "types-tqdm",
    "types-PyYAML", 
    "types-seaborn",
    "pandas-stubs",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore untyped imports for libraries without stubs
[[tool.mypy.overrides]]
module = [
    "pulp.*",
    "vrplib.*", 
    "haversine.*",
    "sklearn.*",
    "kmedoids.*",
    "joblib.*",
    "folium.*",
    "streamlit_folium.*",
    "geopy.*",
    "gurobipy.*",
    "pyvrp.*",
    "numba.*",
    "cython.*",
    "plotly.*",
    "rich.*",
    "streamlit.*",
]
ignore_missing_imports = true
